--- a/src/App.css
+++ b/src/App.css
@@ -206,7 +206,12 @@
     padding: 20px;
 
    }
-    /* Services */
+    /* ----------------------------------Services-------------------------- */
+    .head-services{
+        text-align: center;
+        font-size: 40px;
+        margin-top: 70px;
+    }
     .main-card-container {
         display: grid;
         grid-template-columns: repeat(3, minmax(300px, 500px));
@@ -264,59 +269,83 @@
       /* ---------- Button styles ------------------ */
 
 .navbar {
-    padding-top: 50px;
-    text-align: center;
-  }
-  
-  .navbar h1 {
-    padding-bottom: 20px;
-    text-transform: capitalize;
-  }
-  
-  /** button group styles **/
-  .btn-group {
-    border-radius: 1rem;
-    text-transform: capitalize;
-  }
-  .btn-group__item {
-    border: none;
-    /* min-width: 6rem; */
-    padding: 1.5rem 3rem;
-    background-color: rgb(255, 255, 255);
-    cursor: pointer;
-    margin: 0;
-    font-size: 17px;
-    box-shadow: inset 0px 0px 0px -15px rebeccapurple;
-    transition: all 300ms ease-out;
-    text-transform: capitalize;
-  }
-  .btn-group__item:last-child {
-    border-top-right-radius: 1rem;
-    border-bottom-right-radius: 1rem;
-  }
-  .btn-group__item:first-child {
-    border-top-left-radius: 1rem;
-    border-bottom-left-radius: 1rem;
-  }
-  .btn-group__item:hover,
-  .btn-group__item:focus {
-    color: rebeccapurple;
-    box-shadow: inset 0px -20px 0px -15px rebeccapurple;
-  }
-  .btn-group__item:focus {
-    outline: none;
-  }
-  .btn-group__item:after {
-    content: "✔️";
-    margin-left: 0.5rem;
-    display: inline-block;
-    color: rebeccapurple;
-    position: absolute;
-    transform: translatey(10px);
-    opacity: 0;
-    transition: all 200ms ease-out;
-  }
-  .btn-group__item--active:after {
-    opacity: 1;
-    transform: translatey(-2px);
-  }
+  padding-top: 50px;
+  text-align: center;
+}
+
+.navbar h1 {
+  padding-bottom: 20px;
+  text-transform: capitalize;
+}
+
+/** button group styles **/
+.btn-group {
+  border-radius: 1rem;
+  text-transform: capitalize;
+}
+.btn-group__item {
+  border: none;
+
+  /* min-width: 6rem; */
+  padding: 1.5rem 3rem;
+  background-color: rgb(255, 255, 255);
+  cursor: pointer;
+  margin: 0;
+  font-size: 17px;
+  box-shadow: inset 0px 0px 0px -15px rebeccapurple;
+  transition: all 300ms ease-out;
+  text-transform: capitalize;
+}
+.btn-group__item:last-child {
+  border-top-right-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+}
+.btn-group__item:first-child {
+  border-top-left-radius: 1rem;
+  border-bottom-left-radius: 1rem;
+}
+.btn-group__item:hover,
+.btn-group__item:focus {
+  color: rebeccapurple;
+  box-shadow: inset 0px -20px 0px -15px rebeccapurple;
+}
+.btn-group__item:focus {
+  outline: none;
+}
+.btn-group__item:after {
+  content: "✔️";
+  margin-left: 0.5rem;
+  display: inline-block;
+  color: rebeccapurple;
+  /* position: absolute; */
+  transform: translatey(10px);
+  opacity: 0;
+  transition: all 200ms ease-out;
+}
+.btn-group__item--active:after {
+  opacity: 1;
+  transform: translatey(-2px);
+}
+
+/* --------------Footer----------------- */
+.footerMain{
+    display: flex;
+}
+.footerRight{
+  display: flex;
+  justify-content: center;
+    width: 50%;
+    height: 400px;
+    background:linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)),url("../src/Assets/image3.jpg");
+}
+.footerLeft{
+width: 50%;
+background-color: blueviolet;
+}
+.footer-span{
+  font-size: 2rem;
+
+  color: white;
+ 
+  font-family: "Montserrat"; 
+}
