--- a/src/App.css
+++ b/src/App.css
@@ -32,7 +32,6 @@
 .headerText {
   width: 100%;
   margin-top: 300px;
-  height: 300px;
   /* margin: 20px; */
   margin-left: 40px;
 }
@@ -110,6 +109,8 @@
 
   .headerText {
     margin-top: 0px;
+    width: auto;
+    height: auto;
   }
 }
 
@@ -326,15 +327,15 @@
 
 /* ----------------------------------Services-------------------------- */
 .head-services {
-  text-align: center;
+  /* /* text-align: center;
   font-size: 40px;
-  margin-top: 70px;
-}
+  margin-top: 70px; */
+} 
 
 .main-card-container {
   display: grid;
   grid-template-columns: repeat(3, minmax(300px, 500px));
-  grid-gap: 20px;
+  grid-gap: 10px;
   justify-content: space-around;
 
 }
@@ -371,13 +372,13 @@
 }
 
 .card-shadow {
-  background-color: #fff;
+  /* background-color: #fff;
   box-shadow: 0 2px 25px 2px rgba(0, 0, 0, 1), 0 2px 50px 2px rgba(0, 0, 0, 1),
     0 0 100px 3px rgba(0, 0, 0, 0.25);
   height: 1px;
   margin: -1px auto 0;
   width: 80%;
-  z-index: -1;
+  z-index: -1; */
 }
 
 @media (max-width: 998px) {
@@ -394,31 +395,37 @@
 .navbar {
   padding-top: 50px;
   text-align: center;
+  margin-top: 50px;
 }
 
-.navbar h1 {
-  padding-bottom: 20px;
-  text-transform: capitalize;
+
+.menu{
+  margin-left: 90px;
+  /* margin-top: 50px; */
 }
 
 /** button group styles **/
 .btn-group {
-  border-radius: 1rem;
+  /* border-radius: 1rem; */
   text-transform: capitalize;
+  text-align: center;
+
+  /* margin-left: 20px; */
 }
 
 .btn-group__item {
   border: none;
-
-  /* min-width: 6rem; */
-  padding: 1.5rem 3rem;
+  font-weight: bold;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   background-color: rgb(255, 255, 255);
   cursor: pointer;
   margin: 0;
-  font-size: 17px;
+  font-size: 18px;
   box-shadow: inset 0px 0px 0px -15px rebeccapurple;
   transition: all 300ms ease-out;
-  text-transform: capitalize;
+  /* text-transform: capitalize; */
+  font-size: 15px;
+  /* margin-top: 0px; */
 }
 
 .btn-group__item:last-child {
@@ -716,22 +723,7 @@ background-color: blueviolet;
   transform: translate(-50%, -50%);
 }
 
-/* .portfolio-head{
-  color: #fff;
-  font-size: 60px;
-  position: absolute;
-  top: 55%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.portfolio-para{
-  color: white;
-  position: absolute;
-  font-size: 20px;
-  top: 65%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-} */
+
 
 @media (max-width: 998px){
   .css-k2d9o5-MuiGrid-root {
@@ -743,3 +735,19 @@ background-color: blueviolet;
   /* height:250px ; */
   
 }
+  /* ------------------Services--------------- */
+  .main-services{
+    width: 100%;
+    height: 500px;
+    background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/baner1.jpg");
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
+  .serviceText{
+    position: absolute;
+    color: white;
+    top: 50%;
+    left: 50%;
+    text-align: center;
+    transform: translate(-50%, -50%);
+  }
