--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,21 @@
   height: 100vh;
 
 }
+.navbar{
+  height: 14vh;
+  
+}
+
+
+.logo{
+  width: 290px;
+  height: 200px;
+  /* margin-right: -30px !important; */
+}
+/* .container, .container-fluid, .container-lg, .container-md, .container-sm, .container-xl, .container-xxl{
+  padding-left: 5px !important;
+ 
+} */
 
 
 .navbar-nav a:hover {
@@ -325,7 +340,37 @@
   }
 }
 
-/* ----------------------------------Services-------------------------- */
+/* ----------------------------------Product Card-------------------------- */
+ .servicesImages{
+  /* width: 320px;
+   height: 370px; */
+ 
+} 
+
+.container-img{
+  height: 350px; 
+  width: 100%; 
+  border: 1px solid black;
+  overflow: hidden;
+  border-radius: 10px;
+}
+.container-img img{
+ width: 100%;
+ height: 350px;
+ display: block;
+ transition: transform 2s;
+ border-radius: 10px;
+}
+.container-img:hover img{
+  transform: scale(1.3);
+}
+
+@media only screen and (max-width: 768px){
+  .servicesImages{
+    padding: 10px;
+    width: 410px;
+  }
+}
 .head-services {
   /* /* text-align: center;
   font-size: 40px;
@@ -392,77 +437,60 @@
 
 /* ---------- Button styles ------------------ */
 
-.navbar {
+.navbar-menu {
   padding-top: 50px;
   text-align: center;
-  margin-top: 50px;
 }
-
-
 .menu{
-  margin-left: 90px;
-  /* margin-top: 50px; */
+  margin-left: 90px; 
 }
-
-/** button group styles **/
 .btn-group {
-  /* border-radius: 1rem; */
   text-transform: capitalize;
   text-align: center;
-
-  /* margin-left: 20px; */
 }
-
-.btn-group__item {
+.btn-menu{
   border: none;
-  font-weight: bold;
-  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  background-color: rgb(255, 255, 255);
+  background: none;
   cursor: pointer;
   margin: 0;
-  font-size: 18px;
   box-shadow: inset 0px 0px 0px -15px rebeccapurple;
   transition: all 300ms ease-out;
-  /* text-transform: capitalize; */
-  font-size: 15px;
-  /* margin-top: 0px; */
+  font-size: 16px;
+  font-weight: 400;
+  font-family: unset;
+  color: #FAB407;
 }
-
-.btn-group__item:last-child {
-  border-top-right-radius: 1rem;
-  border-bottom-right-radius: 1rem;
-}
-
-.btn-group__item:first-child {
-  border-top-left-radius: 1rem;
-  border-bottom-left-radius: 1rem;
-}
-
-.btn-group__item:hover,
-.btn-group__item:focus {
+.btn-menu:hover{
   color: rebeccapurple;
   box-shadow: inset 0px -20px 0px -15px rebeccapurple;
 }
-
-.btn-group__item:focus {
-  outline: none;
-}
-
-.btn-group__item:after {
-  content: "✔️";
-  margin-left: 0.5rem;
-  display: inline-block;
+.btn-menu:after{
+ 
   color: rebeccapurple;
-  /* position: absolute; */
   transform: translatey(10px);
   opacity: 0;
   transition: all 200ms ease-out;
 }
-
-.btn-group__item--active:after {
-  opacity: 1;
-  transform: translatey(-2px);
+.menu-line{
+ 
+height: 1px;
+background-color: blue;
+width: 85%;
+margin-left: 7%;
+margin-top: 50px;
+margin-right: 10%;
+} 
+.dot{
+  height: 5px;
+  width: 5px;
+  background-color: rebeccapurple;
+  border-radius: 50%;
+  display: inline-block;
 }
+
+
+
+
 
 /* ---------------------------Concept Section------------------------ */
 .mainConcept {
@@ -598,7 +626,7 @@ background-color: blueviolet;
 .footer-section {
   background-color: #FAB407;
   width: 100%;
-  height: 400px;
+  /* height: 400px; */
   margin-top: 50px;
 
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/image3.jpg");
@@ -653,36 +681,24 @@ background-color: blueviolet;
 
 .contact-para {
   color: #fff;
+ 
 }
 
 .col2 {
   margin-top: 70px !important;
+
 }
 
 .col3 {
   margin-top: 70px !important;
-}
-
-.outer-grid {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 4px;
-}
-
-.inner-grid {
-  /* flex: 25%; */
-  max-width: 30%;
-  padding: 0 4px;
 
 }
-
-.inner-grid img {
-  margin-top: 8px;
-  width: 100%;
-  padding: 8px;
-
+.social-menu{
+  color: #fff;
+  text-decoration: none;
+  line-height: 30px;
+  font-size: 15px;
 }
-
 .fbicon {
   /* margin-left: 100px; */
   display: flex;
