--- a/src/App.css
+++ b/src/App.css
@@ -1,68 +1,22 @@
 body {}
 
 .mainContainer {
-  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/images2.jpg");
+  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 5)), url("../src/Assets/images2.jpg");
   background-size: cover;
   height: 100vh;
 
 }
 
-/* #basic-navbar-nav{
-  margin-bottom: 50px !important;
-}
-.logo {
-  width: 100% !important;
-  height: 200px;
-  overflow: hidden !important;
-} */
-
-/* .navbar {
-  height: 13vh;
-
-} */
-
-/* .navbar-nav {
-  font-size: 20px;
-  font-weight: 600;
-
-}
-#basic-navbar-nav {
-    color: rgb(0, 0, 0);
-    font-weight: bold;
-}
-.navbar-nav a {
-  color: #F79868;
-}
-
-.container {
-  max-width: 1300px !important;
-  margin-left: 10px !important;
-}
-
-.navbar-nav a:hover {
- 
-  color: #525081;
-  box-shadow: inset 0px -20px 0px -15px #525081;
-}
-
-.menu_active {
-  font-weight: bold;
-  border-bottom: 1px solid #565387;
-}
-
-.appBar {
-  background-color: transparent !important;
-}
-
-.css-hip9hq-MuiPaper-root-MuiAppBar-root {
-  box-shadow: none !important;
-} */
+We make best website for you because we have expert team for website development.
+Our website design service is a perfect solution for any business looking to build a site from scratch. 
+It features modern, responsive designs and a content management system that's intuitive and easy to use. 
 
 
 
 /* ---------------------- */
+
 .navbar {
-  background-color: white;
+  /* background-color: #FAD7A0; */
   color: black;
   font-size: 18px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -75,20 +29,23 @@ body {}
 }
 
 .navbar-nav a {
-color: #F79868;
+  color: #F79868;
 }
+
 .navbar-nav a:hover {
- 
+
   color: #525081;
   box-shadow: inset 0px -20px 0px -15px #525081;
 }
+
 .logo {
   width: 100% !important;
   height: 200px;
   overflow: hidden !important;
   margin-top: -70px;
   margin-bottom: -80px;
-} 
+  margin-left: 50px;
+}
 
 .container {
   display: flex;
@@ -102,7 +59,7 @@ color: #F79868;
 .imageContainer {
   display: flex;
   flex-wrap: nowrap;
- 
+
 }
 
 .headerText {
@@ -168,11 +125,12 @@ color: #F79868;
   }
 
 }
-@media screen and (max-width: 980px){
- #basic-navbar-nav{
-  margin-left: 0px !important;
-  overflow: hidden;
- }
+
+@media screen and (max-width: 980px) {
+  #basic-navbar-nav {
+    margin-left: 0px !important;
+    overflow: hidden;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -180,7 +138,7 @@ color: #F79868;
     margin-top: 70px;
     height: 50vh;
   }
-  
+
 
   .imageContainer {
     flex-direction: column;
@@ -391,6 +349,7 @@ color: #F79868;
     flex: none !important;
 
   }
+
   .pic {
     width: 92%;
     height: unset;
@@ -702,6 +661,7 @@ color: #F79868;
 /* ---------------contact---------------- */
 .mainConcept-contact {
   background-color: #FCF6E7;
+  /* height: 500px; */
   display: flex;
   flex-wrap: wrap;
   margin-top: 50px;
@@ -713,7 +673,7 @@ color: #F79868;
 
 .contact-icons {
   font-size: 20px;
-  /* margin-left: 12px; */
+ 
   margin-right: 12px;
   color: #F79868;
   margin-top: 8px;
@@ -728,88 +688,83 @@ color: #F79868;
 /* --------------Footer----------------- */
 
 
-.footer-section {
-  background-color: #F78537;
-  width: 100%;
-  /* height: 400px; */
-  margin-top: 50px;
-
-  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/image3.jpg");
+.footer-class {
+  
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/baner1.jpg");
 }
 
-.footer-heading1 {
-  color: #F78537;
-}
 
-.footer-line {
-  width: 100px;
-  height: 5px;
-  border-radius: 3px;
-  margin-top: 0.45em;
-  margin-bottom: 0.1em;
-  background: #F78537;
-  font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
 
-.footer-para {
-  color: white;
-  font-size: 12.6px;
-}
-
-.btn1 {
-  background: transparent;
-  border: 1px solid #F78537;
-  color: white;
-  padding: 16px 32px;
-  text-align: center;
-  text-decoration: none;
-  display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  transition-duration: 0.4s;
-  cursor: pointer;
-  border-radius: 50px;
-}
-
-.btn1:hover {
-  background-color: #F78537;
-  color: white;
-}
-
-.col1 {
-  margin-top: 70px !important;
-  margin-right: 40px;
-}
-
-.footer-heading2 {
-  color: #F78537;
-}
-
-.contact-para {
-  color: #fff;
-
-}
-
-.col2 {
-  margin-top: 70px !important;
-
-}
-
-.col3 {
-  margin-top: 70px !important;
-
-}
-
-.social-menu {
-  color: #fff;
-  text-decoration: none;
-  line-height: 30px;
+.linkText {
+  text-decoration: none !important;
   font-size: 15px;
+  line-height: 40px;
+  color: white !important;
 }
 
-.fbicon {
-  /* margin-left: 100px; */
+.Heading {
+  color: #F79868;
+  font-weight: 600;
+}
+
+.line {
+  border: none;
+  height: 1px;
+  color: white;
+  /* old IE */
+  background-color: white;
+}
+
+.text_contactus {
+  line-height: 2.5em !important;
+}
+
+.text_contactus>.MuiSvgIcon-root {
+  padding: 5px;
+  font-size: 27px !important;
+}
+.textFooterCopyrightdiv{
+  text-align: center;
+  margin-left: 30px;
+}
+.footerCopyright {
+  width: 100%;
+  color: white;
   display: flex;
+  flex-wrap: nowrap;
+  height: 60px;
+  /* background: linear-gradient(to left, #F49453, #525081); */
+  background-color: black
+}
+.intaicon{
+  margin-left: 5px;
+  size: 50px;
+}
+.space {
+  width: 10%;
+}
+
+.textFooterCopyright {
+  font-size: 15px;
+  font-weight: 600;
+}
+
+.textFooterCopyrightdiv {
+  align-self: center;
+  width: 70%;
+  cursor: pointer;
+}
+
+.socialIcon {
+  align-self: center;
+  width: 20%;
+  cursor: pointer;
+}
+
+@media screen and (max-width: 768px) {
+  .container {
+    margin-left: 0% !important;
+  }
 }
 
 @media screen and (max-width: 800px) {
@@ -882,16 +837,18 @@ color: #F79868;
   color: '#FAB407';
   font-size: '50px';
 }
-.service-heading{
+
+.service-heading {
   color: '#F79868';
-   font-size: '70px'
+  font-size: '70px'
 }
 
 @media screen and (max-width: 1200px) {
-  .main-services{
+  .main-services {
     height: 450px;
-   
+
   }
+
   .serviceText {
     position: absolute;
     color: white;
@@ -899,12 +856,13 @@ color: #F79868;
     left: 50%;
     text-align: center;
     transform: translate(-50%, -50%);
-   
+
   }
-  
-  }
-  /* .service-heading{ */
-    /* color: '#FAB407';
+
+}
+
+/* .service-heading{ */
+/* color: '#FAB407';
     font-size: '50px';
     margin-bottom: 200px;
   } */
