--- a/src/App.css
+++ b/src/App.css
@@ -1,24 +1,33 @@
-body {}
+body {
 
-.mainContainer {
-  background-image: linear-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 5)), url("../src/Assets/images2.jpg");
-  background-size: cover;
-  height: 100vh;
-
+  margin: 0;
 }
 
-We make best website for you because we have expert team for website development.
-Our website design service is a perfect solution for any business looking to build a site from scratch. 
-It features modern, responsive designs and a content management system that's intuitive and easy to use. 
+.mainContainer {
+  background-image: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url("../src/Assets/images2.jpg");
+  background-size: cover;
+  height: 100vh;
+  margin-top: 30px !important;
+}
 
+/* header */
+
+.headerTop {
+  min-height: 35px !important;
+  background-color: #525081;
+  width: 100%;
+}
 
 
 /* ---------------------- */
 
 .navbar {
-  /* background-color: #FAD7A0; */
+  background-color: white;
   color: black;
-  font-size: 18px;
+  /* position: sticky !important;
+  top: 0% !important;
+  z-index: 9999; */
+  font-size: 20px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
@@ -29,22 +38,22 @@ It features modern, responsive designs and a content management system that's in
 }
 
 .navbar-nav a {
-  color: #F79868;
+  color: #525081;
 }
 
 .navbar-nav a:hover {
 
-  color: #525081;
-  box-shadow: inset 0px -20px 0px -15px #525081;
+  color: #F79868;
+  box-shadow: inset 0px -20px 0px -15px #F79868;
 }
 
 .logo {
-  width: 100% !important;
+  width: 110% !important;
   height: 200px;
   overflow: hidden !important;
-  margin-top: -70px;
-  margin-bottom: -80px;
-  margin-left: 50px;
+  margin-top: -100px;
+  margin-bottom: -130px;
+  margin-left: 20px;
 }
 
 .container {
@@ -157,6 +166,14 @@ It features modern, responsive designs and a content management system that's in
   }
 }
 
+@media (min-width: 992px) {
+  .navbar-expand-lg .navbar-nav .nav-link {
+    /* padding-top: 2rem !important; */
+    padding-left: 2rem !important;
+    align-items: center !important;
+  }
+}
+
 /* text section */
 .text_Section {
   width: 100%;
@@ -217,10 +234,10 @@ It features modern, responsive designs and a content management system that's in
     } */
   .logo {
     overflow: hidden !important;
-    width: 80% !important;
+    width: 100% !important;
     height: 150px !important;
-    margin-top: -80px !important;
-    margin-bottom: -80px !important;
+    margin-top: -90px !important;
+    margin-bottom: -90px !important;
   }
 }
 
@@ -594,7 +611,7 @@ It features modern, responsive designs and a content management system that's in
 }
 
 .rightConcept {
-  width: 50%;
+  width: 40%;
 }
 
 .concept-para {
@@ -640,7 +657,7 @@ It features modern, responsive designs and a content management system that's in
   }
 
   .rightConcept {
-    width: 90%;
+    width: 80%;
     /* margin-left: 60px; */
   }
 
@@ -673,7 +690,7 @@ It features modern, responsive designs and a content management system that's in
 
 .contact-icons {
   font-size: 20px;
- 
+
   margin-right: 12px;
   color: #F79868;
   margin-top: 8px;
@@ -689,7 +706,7 @@ It features modern, responsive designs and a content management system that's in
 
 
 .footer-class {
-  
+
   background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/baner1.jpg");
 }
 
@@ -723,10 +740,12 @@ It features modern, responsive designs and a content management system that's in
   padding: 5px;
   font-size: 27px !important;
 }
-.textFooterCopyrightdiv{
+
+.textFooterCopyrightdiv {
   text-align: center;
   margin-left: 30px;
 }
+
 .footerCopyright {
   width: 100%;
   color: white;
@@ -736,10 +755,12 @@ It features modern, responsive designs and a content management system that's in
   /* background: linear-gradient(to left, #F49453, #525081); */
   background-color: black
 }
-.intaicon{
+
+.intaicon {
   margin-left: 5px;
   size: 50px;
 }
+
 .space {
   width: 10%;
 }
