--- a/src/App.css
+++ b/src/App.css
@@ -14,27 +14,29 @@ body {
 
 .headerTop {
   min-height: 35px !important;
-  background-color: #525081;
+  background-color: #112134;
   width: 100%;
 }
-
+/* #525081 */
 
 /* ---------------------- */
 
 .navbar {
-  background-color: white;
+  background-color: #FFFFFF;
+  /* height: auto; */
   color: black;
-  /* position: sticky !important;
+  position: sticky !important;
   top: 0% !important;
-  z-index: 9999; */
+  z-index: 9999;
   font-size: 20px;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
 #basic-navbar-nav {
-  margin-left: 300px;
-  color: rgb(0, 0, 0);
+  margin-left: 300px; 
+   color: rgb(0, 0, 0);
   font-weight: 600;
+  /* margin-top: 20px; */
 }
 
 .navbar-nav a {
@@ -44,16 +46,28 @@ body {
 .navbar-nav a:hover {
 
   color: #F79868;
-  box-shadow: inset 0px -20px 0px -15px #F79868;
+  box-shadow: inset 0px -20px 10px -15px #F79868;
+      /* content: '';
+    position: absolute;
+    width: 50%;
+    transform: scaleX(0);
+    height: 2px;
+    bottom: 0;
+    left: 0;
+    background-color: #C8523B;
+    transform-origin: bottom left;
+    transition: transform 1.5s ease-out;
+    animation: anim 3s infinite;
+    animation-direction: alternate; */
 }
 
 .logo {
-  width: 110% !important;
+  width: 100% !important;
   height: 200px;
   overflow: hidden !important;
-  margin-top: -100px;
+  margin-top: -105px;
   margin-bottom: -130px;
-  margin-left: 20px;
+  margin-left: 50px;
 }
 
 .container {
@@ -228,16 +242,13 @@ body {
     font-size: 15px;
   }
 
-  /* .para {
-        margin-left: 2px;
-        width: 97%;
-    } */
+ 
   .logo {
     overflow: hidden !important;
     width: 100% !important;
     height: 150px !important;
     margin-top: -90px !important;
-    margin-bottom: -90px !important;
+    /* margin-bottom: -90px !important; */
   }
 }
 
@@ -245,10 +256,11 @@ body {
 .About_Section {
 
   margin-top: 80px;
+ 
   /* background-color: #E3E2E1; */
   /* display: flex; */
   /* flex-wrap: nowrap; */
-  background-color: #FCF6E7;
+  /* background-color: #FCF6E7; */
 }
 
 .about-para {
@@ -257,6 +269,28 @@ body {
 
 .about-us {
   margin-top: 50px;
+  color: #525081;
+}
+.about-para-service{
+  color: #FFFFFF;
+}
+.service-us{
+  color:#F49453;
+}
+.footer-heading2{
+  text-align: justify;
+  width: 50%;
+
+  background-color: #F49453;
+}
+.portfolio-text{
+  margin-top: 90px !important;
+}
+.background-color{
+  /* background: #F49453; */
+  margin-top: 50px !important;
+ 
+  background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.7)), url("../src/Assets/baner1.jpg");
 }
 
 .btn2 {
@@ -284,7 +318,7 @@ body {
 .btn3 {
   background: transparent;
   border: 2px solid #F49453;
-  color: black;
+  color: #FFFFFF;
   padding: 16px 32px;
   text-align: center;
   text-decoration: none;
