--- a/src/App.css
+++ b/src/App.css
@@ -17,7 +17,11 @@ body {
   background-color: #112134;
   width: 100%;
 }
-
+.css-18gxgid-MuiPaper-root
+{
+    border-radius: 0px !important;
+    box-shadow: none !important;
+}
 
 /* ---------------------- */
 
@@ -1012,3 +1016,22 @@ body {
     margin-bottom: 200px;
   } */
 /* } */
+
+/* ---------Products---------- */
+.swiper {
+  width: 100%;
+  padding-top: 50px;
+  padding-bottom: 50px;
+}
+
+.swiper-slide {
+  background-position: center;
+  background-size: cover;
+  width: 300px;
+  height: 300px;
+}
+
+.swiper-slide img {
+  display: block;
+  width: 100%;
+}
