Changes in Service Section

--- a/src/App.css
+++ b/src/App.css
@@ -647,13 +647,13 @@ body {
   margin-right: 10%;
 }
 
-.dot {
+/* .dot {
   height: 5px;
   width: 5px;
   background-color: rebeccapurple;
   border-radius: 50%;
   display: inline-block;
-}
+} */
 
 
 
